fix bad alignment of total sum in cart

--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -4,6 +4,7 @@
 .carts {
   table {
     border-collapse: collapse;
+    width: 100%;
   }
   td {
     padding: 0.5em;
@@ -20,14 +21,14 @@
   }
   tfoot {
     th,
-    th.price {
+    td.price {
       font-weight: bold;
       padding-top: 1em;
     }
     th {
       text-align: right;
     }
-    th.price {
+    td.price {
       border-top: solid thin;
     }
   }
